fixing error: overflow on home page

--- a/App/src/Pages/Default/DefaultPage.scss
+++ b/App/src/Pages/Default/DefaultPage.scss
@@ -8,6 +8,7 @@ main {
   top: 0;
   bottom: 0;
   width: 100%;
+  max-height: 100vh;
 }
 
 p,
